--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -2401,6 +2401,8 @@ content: '';
   border-top-left-radius: 1em;
   top: -1.25em;
   box-shadow: 0px 2px 8px #0005;
+  border-bottom-left-radius: 1em;
+  border-bottom-right-radius: 1em;
 }
 
 .layout-desktop #itemDetailPage .card.portraitCard .cardImageContainer.coveredImage.cardContent.lazy.blurhashed.lazy-image-fadein-fast,
@@ -3776,3 +3778,4 @@ content: '';
   display: flex;
   font-size: 90%;
 }
+
