--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -2703,7 +2703,7 @@ content: '';
 }
 
 .layout-desktop #scenesCollapsible .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX,
-.layout-tv #scenesCollapsible .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX, {
+.layout-tv #scenesCollapsible .scrollSlider.focuscontainer-x.itemsContainer.animatedScrollX {
   display: grid !important;
   grid-template-columns: repeat(4, 1fr);
   gap: 0.5rem;
