--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -3025,8 +3025,12 @@ content: '';
   border: solid 1px #fff !important;
 }
 
-.layout-tv .detailPageWrapperContainer {
-  padding-top: 49.3em !important;
+.layout-tv div.itemMiscInfo.itemMiscInfo-primary {
+  margin-top: -0.5em;
+}
+
+.layout-tv .itemDetailPage {
+  padding-top: 3em !important;
 }
 
 .currentTimeText {
@@ -3238,7 +3242,7 @@ content: '';
   margin: 0;
 }
 
-.itemDetailPage:has(.itemName.parentNameLast) #itemBackdrop {
+.layout-desktop .itemDetailPage:has(.itemName.parentNameLast) #itemBackdrop {
     height: calc(100vh + 3em);
     animation: shrinkBackdrop 1s cubic-bezier(0.25, 0.8, 0.25, 1) 1.25s forwards;
 }
