--- a/finimalism10.11.css
+++ b/finimalism10.11.css
@@ -3276,6 +3276,13 @@ content: '';
   opacity: 1 !important;
 }
 
+.layout-desktop .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) #itemBackdrop
+.layout-tv .itemDetailPage:has(.button-link.itemAction.emby-button[data-type="Season"]) #itemBackdrop,
+.layout-desktop .itemDetailPage:has(.itemName.infoText.subtitle) #itemBackdrop,
+.layout-tv .itemDetailPage:has(.itemName.infoText.subtitle) #itemBackdrop {
+  height: 3em;
+}
+
 
 @keyframes shrinkBackdrop {
     0%   { height: 100vh; }
